# neura-call-center

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_server.py  test_api.py  test_websocket_simple.py
alembic/: env.py
alembic/versions/: 2025_11_23_1950-8b42f7243e12_add_api_key_authentication.py  2025_11_23_2153-854a865348b9_initial_migration.py
apps/: __init__.py
apps/agents/: __init__.py  call_agent.py
apps/agents/tools/: __init__.py  crm_tools.py  database_tools.py
apps/api/: main.py
apps/api/middleware/: __init__.py  auth.py  rate_limit.py  security.py
apps/api/routers/: api_keys.py  calls.py  health.py  streaming.py  webhooks.py
apps/core/: __init__.py  config.py  database.py  logging.py  metrics.py  telemetry.py
apps/models/: __init__.py  api_key.py  base.py  call.py  claim.py  conversation.py
apps/providers/: __init__.py  base.py
apps/providers/stt/: __init__.py  base.py  deepgram.py  factory.py  whisper.py
apps/providers/telephony/: __init__.py  base.py  factory.py  twilio.py
apps/providers/tts/: __init__.py  base.py  elevenlabs.py  factory.py  openai.py
examples/: __init__.py  agent_example.py  stt_example.py  test_monitoring.py  test_security.py  tts_example.py  websocket_client.py
infrastructure/grafana/dashboards/: dashboard.yml  neura-call-center.json
infrastructure/grafana/datasources/: prometheus.yml  tempo.yml
infrastructure/prometheus/: prometheus.yml
infrastructure/tempo/: tempo.yaml
scripts/: setup.sh  test.sh
tests/: conftest.py  test_api.py  test_websocket.py
tests/agents/: __init__.py  test_call_agent.py
tests/providers/: __init__.py  test_stt_providers.py  test_tts_providers.py
